--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ p {
 
 .note {
   width: 80%;
-  max-width: 700px;
+  max-width: 650px;
   display: block;
   margin: 3em auto;
   padding: 1em;
@@ -90,7 +90,7 @@ p {
 #header {
     background: rgba(0,0,0,.9);
     box-shadow: 0 1px 6px rgba(0, 0, 0, .6);
-    width: 100vw;
+    width: 100%;
 }
 
 #bigHeader {
